crates/analyzer/tests/snapshots/errors__bad_visibility.snap
---
source: crates/analyzer/tests/errors.rs
expression: error_string_ingot(&path)

---
error: the type `MyInt` is private
  ┌─ compile_errors/bad_visibility/src/main.fe:8:33
  │
8 │     pub fn priv_type_alias() -> MyInt {
  │                                 ^^^^^ this type is not `pub`
  │
  ┌─ compile_errors/bad_visibility/src/foo.fe:1:6
  │
1 │ type MyInt = i32
  │      ----- `MyInt` is defined here
  │
  = `MyInt` can only be used within `foo`
  = Hint: use `pub` to make `MyInt` visible from outside of `foo`

error: the type `MyInt` is private
  ┌─ compile_errors/bad_visibility/src/main.fe:9:16
  │
9 │         let x: MyInt = 1
  │                ^^^^^ this type is not `pub`
  │
  ┌─ compile_errors/bad_visibility/src/foo.fe:1:6
  │
1 │ type MyInt = i32
  │      ----- `MyInt` is defined here
  │
  = `MyInt` can only be used within `foo`
  = Hint: use `pub` to make `MyInt` visible from outside of `foo`

error: the constant `MY_CONST` is private
   ┌─ compile_errors/bad_visibility/src/main.fe:14:16
   │
14 │         return MY_CONST
   │                ^^^^^^^^ this constant is not `pub`
   │
   ┌─ compile_errors/bad_visibility/src/foo.fe:3:7
   │
 3 │ const MY_CONST: MyInt = 1
   │       -------- `MY_CONST` is defined here
   │
   = `MY_CONST` can only be used within `foo`
   = Hint: use `pub` to make `MY_CONST` visible from outside of `foo`

error: the constant `MY_CONST` is private
   ┌─ compile_errors/bad_visibility/src/main.fe:14:16
   │
14 │         return MY_CONST
   │                ^^^^^^^^ this constant is not `pub`
   │
   ┌─ compile_errors/bad_visibility/src/foo.fe:3:1
   │
 3 │ const MY_CONST: MyInt = 1
   │ ------------------------- `MY_CONST` is defined here
   │
   = `MY_CONST` can only be used within `foo`
   = Hint: use `pub const MY_CONST` to make `MY_CONST` visible from outside of `foo`

error: the event `MyEvent` is private
   ┌─ compile_errors/bad_visibility/src/main.fe:18:14
   │
18 │         emit MyEvent(ctx, x: 1)
   │              ^^^^^^^ this event is not `pub`
   │
   ┌─ compile_errors/bad_visibility/src/foo.fe:7:7
   │
 7 │ event MyEvent {
   │       ------- `MyEvent` is defined here
   │
   = `MyEvent` can only be used within `foo`
   = Hint: use `pub` to make `MyEvent` visible from outside of `foo`

error: the event `MyEvent` is private
   ┌─ compile_errors/bad_visibility/src/main.fe:18:14
   │
18 │         emit MyEvent(ctx, x: 1)
   │              ^^^^^^^ this event is not `pub`
   │
   ┌─ compile_errors/bad_visibility/src/foo.fe:7:1
   │  
 7 │ ╭ event MyEvent {
 8 │ │     x: i32
 9 │ │ }
   │ ╰─' `MyEvent` is defined here
   │  
   = `MyEvent` can only be used within `foo`
   = Hint: use `pub event MyEvent` to make `MyEvent` visible from outside of `foo`

error: cannot find value `ctx` in this scope
   ┌─ compile_errors/bad_visibility/src/main.fe:18:22
   │
18 │         emit MyEvent(ctx, x: 1)
   │                      ^^^ undefined

error: the struct `MyStruct` is private
   ┌─ compile_errors/bad_visibility/src/main.fe:22:16
   │
22 │         let s: MyStruct = MyStruct(x: 1)
   │                ^^^^^^^^ this struct is not `pub`
   │
   ┌─ compile_errors/bad_visibility/src/foo.fe:11:8
   │
11 │ struct MyStruct {
   │        -------- `MyStruct` is defined here
   │
   = `MyStruct` can only be used within `foo`
   = Hint: use `pub` to make `MyStruct` visible from outside of `foo`

error: the struct `MyStruct` is private
   ┌─ compile_errors/bad_visibility/src/main.fe:22:27
   │
22 │         let s: MyStruct = MyStruct(x: 1)
   │                           ^^^^^^^^ this struct is not `pub`
   │
   ┌─ compile_errors/bad_visibility/src/foo.fe:11:8
   │
11 │ struct MyStruct {
   │        -------- `MyStruct` is defined here
   │
   = `MyStruct` can only be used within `foo`
   = Hint: use `pub` to make `MyStruct` visible from outside of `foo`

error: Can not call private constructor of struct `MyStruct` 
   ┌─ compile_errors/bad_visibility/src/foo.fe:12:5
   │
12 │     x: i32
   │     ^^^^^^ Field `x` is private
   │
   = Suggestion: implement a method `new(...)` on struct `MyStruct` to call the constructor and return the struct

error: the function `my_func` is private
   ┌─ compile_errors/bad_visibility/src/main.fe:26:9
   │
26 │         my_func()
   │         ^^^^^^^ this function is not `pub`
   │
   ┌─ compile_errors/bad_visibility/src/foo.fe:15:4
   │
15 │ fn my_func() {}
   │    ------- `my_func` is defined here
   │
   = `my_func` can only be used within `foo`
   = Hint: use `pub` to make `my_func` visible from outside of `foo`

error: the type `MyContract` is private
   ┌─ compile_errors/bad_visibility/src/main.fe:30:16
   │
30 │         let _: MyContract = MyContract(addr)
   │                ^^^^^^^^^^ this type is not `pub`
   │
   ┌─ compile_errors/bad_visibility/src/foo.fe:17:10
   │
17 │ contract MyContract {
   │          ---------- `MyContract` is defined here
   │
   = `MyContract` can only be used within `foo`
   = Hint: use `pub` to make `MyContract` visible from outside of `foo`

error: the type `MyContract` is private
   ┌─ compile_errors/bad_visibility/src/main.fe:30:29
   │
30 │         let _: MyContract = MyContract(addr)
   │                             ^^^^^^^^^^ this type is not `pub`
   │
   ┌─ compile_errors/bad_visibility/src/foo.fe:17:10
   │
17 │ contract MyContract {
   │          ---------- `MyContract` is defined here
   │
   = `MyContract` can only be used within `foo`
   = Hint: use `pub` to make `MyContract` visible from outside of `foo`

error: the type `MyContract` is private
   ┌─ compile_errors/bad_visibility/src/main.fe:31:9
   │
31 │         MyContract.create(ctx, 1)
   │         ^^^^^^^^^^ this type is not `pub`
   │
   ┌─ compile_errors/bad_visibility/src/foo.fe:17:10
   │
17 │ contract MyContract {
   │          ---------- `MyContract` is defined here
   │
   = `MyContract` can only be used within `foo`
   = Hint: use `pub` to make `MyContract` visible from outside of `foo`

error: the trait `MyTrait` is private
  ┌─ compile_errors/bad_visibility/src/foo.fe:5:7
  │
5 │ trait MyTrait {}
  │       ^^^^^^^ this trait is not `pub`
  │
  = `MyTrait` can only be used within `foo`
  = Hint: use `pub trait MyTrait` to make `MyTrait` visible from outside of `foo`


